--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dockerfile_lint": "~0.0.9",
     "eslint": "~2.3.0",
     "jshint": "~2.9.1",
-    "remark": "~3.2.3"
+    "remark": "~3.2.3",
+    "tslint": "~3.5.0"
   }
 }
